<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_title" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_title">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBarOverlay"
           >

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/center"
                        android:layout_height="@dimen/center"
                        android:src="@drawable/bannertupian" />

                    <TextView
                        android:id="@+id/merName"
                        style="@style/te1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send" />

                    <TextView
                        android:id="@+id/merAddress"
                        style="@style/te1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send" />
                </LinearLayout>
            </android.support.design.widget.CollapsingToolbarLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabTextColor="@color/colorDark"
                app:tabMode="fixed">
                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"/>
                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"/>
            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

           <android.support.v4.view.ViewPager
               android:id="@+id/viewPager2"
               android:layout_width="match_parent"
               android:layout_height="200dp"
              >
           </android.support.v4.view.ViewPager>

        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/bottom2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/redColor"
            android:padding="@dimen/small">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/good"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xia"
                android:padding="@dimen/small"
                android:onClick="onClick"
                android:layout_weight="1"
                style="@style/te2"/>
        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>